<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.admincmd</groupId>
    <artifactId>AdminCMD</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>


    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>16</maven.compiler.source>
        <maven.compiler.target>16</maven.compiler.target>
    </properties>

    <scm>
        <connection>scm:git:git@github.com:AdminCMD/AdminCMD.git</connection>
        <url>scm:git:git@github.com:AdminCMD/AdminCMD.git</url>
        <developerConnection>scm:git:git@github.com:AdminCMD/AdminCMD.git</developerConnection>
        <tag>HEAD</tag>
    </scm>

    <organization>
        <name>AdminCmd Team</name>
        <url>https://github.com/AdminCMD</url>
    </organization>

    <licenses>
        <license>
            <name>GNU GPL v3</name>
            <url>http://www.gnu.org/licenses/gpl.txt</url>
        </license>
    </licenses>

    <modules>
        <module>AdminCMD-Bukkit</module>
        <module>AdminCMD-BungeeCord</module>
        <module>AdminCMD-Kits</module>
        <module>AdminCMD-Punishments</module>
        <module>AdminCMD-VirtualChest</module>
        <module>AdminCMD-ChestSigns</module>
    </modules>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <id>copy-artifact</id>
                        <phase>install</phase>
                        <goals>
                            <goal>copy</goal>
                        </goals>
                        <configuration>
                            <artifactItems>
                                <artifactItem>
                                    <groupId>${project.groupId}</groupId>
                                    <artifactId>${project.artifactId}</artifactId>
                                    <version>${project.version}</version>
                                    <type>${project.packaging}</type>
                                </artifactItem>
                            </artifactItems>
                            <outputDirectory>../target/</outputDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        <repository>
            <id>bungeecord-repo</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </repository>
    </repositories>
</project>
